# cloudfunctions_autodeploy_sample

./: .gcloudignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-cloudfunctions.yaml  pytest.yaml
source/: main.py
tests/: test_main.py
