[tool.poetry]
name = "cloudfunctions-autodeploy-sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pytest = "^8.3.2"
cloudevents = "^1.11.0"
functions-framework = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
